--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="customPrimary">#69C8C7</color>
     <color name="primaryTextColor">#76777B</color>
+    <color name="dividerColor">#B6B6B6</color>
 </resources>
