--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">4dp</dimen>
     <dimen name="activity_vertical_margin">4dp</dimen>
+    <dimen name="sub_layout_padding_vertical">16dp</dimen>
+    <dimen name="sub_layout_padding_horizontal">48dp</dimen>
+    <dimen name="main_button_padding_vertical">16dp</dimen>
+    <dimen name="main_button_padding_horizontal">24dp</dimen>
 </resources>
