--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.nbau21.sampletimepicker.MainActivity">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/toolbarColor"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/edit_feed_text"
+                android:textSize="@dimen/primary_text_font_size" />
+
+            <ImageView
+                android:id="@+id/delete_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:paddingRight="@dimen/toolbar_padding_horizontal"
+                android:src="@drawable/ic_delete_white_24dp" />
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <LinearLayout
         android:id="@+id/name_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/view"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/sub_layout_padding_vertical"
         android:paddingLeft="@dimen/sub_layout_padding_horizontal"
@@ -31,7 +69,8 @@
             android:layout_alignParentStart="true"
             android:capitalize="characters"
             android:paddingRight="4dp"
-            android:text="@string/name_text" />
+            android:text="@string/name_text"
+            android:textSize="@dimen/primary_text_font_size" />
 
         <EditText
             android:id="@+id/name_edittext"
@@ -40,7 +79,8 @@
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/name_textview"
             android:layout_toRightOf="@+id/name_textview"
-            android:textColor="@color/primaryTextColor" />
+            android:textColor="@color/primaryTextColor"
+            android:textSize="@dimen/primary_text_font_size" />
 
     </LinearLayout>
 
@@ -84,7 +124,8 @@
             android:layout_height="wrap_content"
             android:background="@color/customPrimary"
             android:text="@string/save_button"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/primary_text_font_size" />
     </FrameLayout>
 
     <!--<TextView
@@ -118,7 +159,8 @@
             android:layout_alignParentStart="true"
             android:capitalize="characters"
             android:paddingRight="20dp"
-            android:text="@string/time_text" />
+            android:text="@string/time_text"
+            android:textSize="@dimen/primary_text_font_size" />
 
     </LinearLayout>
 
@@ -133,3 +175,4 @@
         android:timePickerMode="clock" />
 
 </RelativeLayout>
+</LinearLayout>
